src/graphics/lib/compute/spinel-vk-rs/src/lib.rs

extern "C" {
    pub fn spinel_context_get_limits(
        context: spinel_context_t,
        limits: *mut spinel_context_limits_t,
    ) -> spinel_result_t::Type;
}
extern "C" {
    pub fn spinel_path_builder_create(
        context: spinel_context_t,
        path_builder: *mut spinel_path_builder_t,
    ) -> spinel_result_t::Type;
}
extern "C" {
    pub fn spinel_path_builder_retain(path_builder: spinel_path_builder_t)
        -> spinel_result_t::Type;
}
extern "C" {
    pub fn spinel_path_builder_release(
        path_builder: spinel_path_builder_t,
    ) -> spinel_result_t::Type;
}
extern "C" {
    pub fn spinel_path_builder_flush(path_builder: spinel_path_builder_t) -> spinel_result_t::Type;
}
extern "C" {
    pub fn spinel_path_builder_begin(path_builder: spinel_path_builder_t) -> spinel_result_t::Type;
}
extern "C" {
    pub fn spinel_path_builder_end(
        path_builder: spinel_path_builder_t,
        path: *mut spinel_path_t,
    ) -> spinel_result_t::Type;
}
extern "C" {
    pub fn spinel_path_builder_move_to(
        path_builder: spinel_path_builder_t,
        x0: f32,
        y0: f32,
    ) -> spinel_result_t::Type;
}
extern "C" {
    pub fn spinel_path_builder_line_to(
        path_builder: spinel_path_builder_t,
        x1: f32,
        y1: f32,
    ) -> spinel_result_t::Type;
}
extern "C" {
    pub fn spinel_path_builder_cubic_to(
        path_builder: spinel_path_builder_t,
        x1: f32,
        y1: f32,
        x2: f32,
        y2: f32,
        x3: f32,
        y3: f32,
    ) -> spinel_result_t::Type;
}
extern "C" {
    pub fn spinel_path_builder_cubic_smooth_to(
        path_builder: spinel_path_builder_t,
        x2: f32,
        y2: f32,
        x3: f32,
        y3: f32,
    ) -> spinel_result_t::Type;
}
extern "C" {
    pub fn spinel_path_builder_quad_to(
        path_builder: spinel_path_builder_t,
        x1: f32,
        y1: f32,
        x2: f32,
        y2: f32,
    ) -> spinel_result_t::Type;
}
extern "C" {
    pub fn spinel_path_builder_quad_smooth_to(
        path_builder: spinel_path_builder_t,
        x2: f32,
        y2: f32,
    ) -> spinel_result_t::Type;
}
extern "C" {
    pub fn spinel_path_builder_rat_quad_to(
        path_builder: spinel_path_builder_t,
        x1: f32,
        y1: f32,
        x2: f32,
        y2: f32,
        w1: f32,
    ) -> spinel_result_t::Type;
}
extern "C" {
    pub fn spinel_path_builder_rat_cubic_to(
        path_builder: spinel_path_builder_t,
        x1: f32,
        y1: f32,
        x2: f32,
        y2: f32,
        x3: f32,
        y3: f32,
        w1: f32,
        w2: f32,
    ) -> spinel_result_t::Type;
}
extern "C" {
    pub fn spinel_path_retain(
        context: spinel_context_t,
        paths: *const spinel_path_t,
        count: u32,
    ) -> spinel_result_t::Type;
}
extern "C" {
    pub fn spinel_path_release(
        context: spinel_context_t,
        paths: *const spinel_path_t,
        count: u32,
    ) -> spinel_result_t::Type;
}
extern "C" {
    pub fn spinel_raster_builder_create(
        context: spinel_context_t,
        raster_builder: *mut spinel_raster_builder_t,
    ) -> spinel_result_t::Type;
}
extern "C" {
    pub fn spinel_raster_builder_retain(
        raster_builder: spinel_raster_builder_t,
    ) -> spinel_result_t::Type;
}
extern "C" {
    pub fn spinel_raster_builder_release(
        raster_builder: spinel_raster_builder_t,
    ) -> spinel_result_t::Type;
}
extern "C" {
    pub fn spinel_raster_builder_flush(
        raster_builder: spinel_raster_builder_t,
    ) -> spinel_result_t::Type;
}
extern "C" {
    pub fn spinel_raster_builder_begin(
        raster_builder: spinel_raster_builder_t,
    ) -> spinel_result_t::Type;
}
extern "C" {
    pub fn spinel_raster_builder_end(
        raster_builder: spinel_raster_builder_t,
        raster: *mut spinel_raster_t,
    ) -> spinel_result_t::Type;
}
extern "C" {
    pub fn spinel_raster_builder_add(
        raster_builder: spinel_raster_builder_t,
        paths: *const spinel_path_t,
        transform_weakrefs: *mut spinel_transform_weakref_t,
        transforms: *const spinel_transform_t,
        clip_weakrefs: *mut spinel_clip_weakref_t,
        clips: *const spinel_clip_t,
        count: u32,
    ) -> spinel_result_t::Type;
}
extern "C" {
    pub fn spinel_raster_retain(
        context: spinel_context_t,
        rasters: *const spinel_raster_t,
        count: u32,
    ) -> spinel_result_t::Type;
}
extern "C" {
    pub fn spinel_raster_release(
        context: spinel_context_t,
        rasters: *const spinel_raster_t,
        count: u32,
    ) -> spinel_result_t::Type;
}
extern "C" {
    pub fn spinel_composition_create(
        context: spinel_context_t,
        composition: *mut spinel_composition_t,
    ) -> spinel_result_t::Type;
}
extern "C" {
    pub fn spinel_composition_retain(composition: spinel_composition_t) -> spinel_result_t::Type;
}
extern "C" {
    pub fn spinel_composition_release(composition: spinel_composition_t) -> spinel_result_t::Type;
}
extern "C" {
    pub fn spinel_composition_place(
        composition: spinel_composition_t,
        rasters: *const spinel_raster_t,
        layer_ids: *const spinel_layer_id,
        txtys: *const spinel_txty_t,
        count: u32,
    ) -> spinel_result_t::Type;
}
extern "C" {
    pub fn spinel_composition_seal(composition: spinel_composition_t) -> spinel_result_t::Type;
}
extern "C" {
    pub fn spinel_composition_unseal(composition: spinel_composition_t) -> spinel_result_t::Type;
}
extern "C" {
    pub fn spinel_composition_reset(composition: spinel_composition_t) -> spinel_result_t::Type;
}
extern "C" {
    pub fn spinel_composition_set_clip(
        composition: spinel_composition_t,
        clip: *const spinel_pixel_clip_t,
    ) -> spinel_result_t::Type;
}
extern "C" {
    pub fn spinel_styling_create(
        context: spinel_context_t,
        create_info: *const spinel_styling_create_info_t,
        styling: *mut spinel_styling_t,
    ) -> spinel_result_t::Type;
}
extern "C" {
    pub fn spinel_styling_retain(styling: spinel_styling_t) -> spinel_result_t::Type;
}
extern "C" {
    pub fn spinel_styling_release(styling: spinel_styling_t) -> spinel_result_t::Type;
}
extern "C" {
    pub fn spinel_styling_seal(styling: spinel_styling_t) -> spinel_result_t::Type;
}
extern "C" {
    pub fn spinel_styling_unseal(styling: spinel_styling_t) -> spinel_result_t::Type;
}
extern "C" {
    pub fn spinel_styling_reset(styling: spinel_styling_t) -> spinel_result_t::Type;
}
extern "C" {
    pub fn spinel_styling_group_alloc(
        styling: spinel_styling_t,
        group_id: *mut spinel_group_id,
    ) -> spinel_result_t::Type;
}
extern "C" {
    pub fn spinel_styling_group_enter(
        styling: spinel_styling_t,
        group_id: spinel_group_id,
        n: u32,
        cmds: *mut *mut u32,
    ) -> spinel_result_t::Type;
}
extern "C" {
    pub fn spinel_styling_group_leave(
        styling: spinel_styling_t,
        group_id: spinel_group_id,
        n: u32,
        cmds: *mut *mut u32,
    ) -> spinel_result_t::Type;
}
extern "C" {
    pub fn spinel_styling_group_parents(
        styling: spinel_styling_t,
        group_id: spinel_group_id,
        n: u32,
        parents: *mut *mut u32,
    ) -> spinel_result_t::Type;
}
extern "C" {
    pub fn spinel_styling_group_range_lo(
        styling: spinel_styling_t,
        group_id: spinel_group_id,
        layer_lo: spinel_layer_id,
    ) -> spinel_result_t::Type;
}
extern "C" {
    pub fn spinel_styling_group_range_hi(
        styling: spinel_styling_t,
        group_id: spinel_group_id,
        layer_hi: spinel_layer_id,
    ) -> spinel_result_t::Type;
}
extern "C" {
    pub fn spinel_styling_group_layer(
        styling: spinel_styling_t,
        group_id: spinel_group_id,
        layer_id: spinel_layer_id,
        n: u32,
        cmds: *mut *mut spinel_styling_cmd_t,
    ) -> spinel_result_t::Type;
}
extern "C" {
    pub fn spinel_styling_layer_fill_rgba_encoder(
        cmds: *mut spinel_styling_cmd_t,
        rgba: *const f32,
    );
}
extern "C" {
    pub fn spinel_styling_background_over_encoder(
        cmds: *mut spinel_styling_cmd_t,
        rgba: *const f32,
    );
}
extern "C" {
    pub fn spinel_swapchain_create(
        context: spinel_context_t,
        create_info: *const spinel_swapchain_create_info_t,
        swapchain: *mut spinel_swapchain_t,
    ) -> spinel_result_t::Type;
}
extern "C" {
    pub fn spinel_swapchain_retain(swapchain: spinel_swapchain_t) -> spinel_result_t::Type;
}
extern "C" {
    pub fn spinel_swapchain_release(swapchain: spinel_swapchain_t) -> spinel_result_t::Type;
}
extern "C" {
    pub fn spinel_swapchain_submit(
        swapchain: spinel_swapchain_t,
        submit: *const spinel_swapchain_submit_t,
    ) -> spinel_result_t::Type;
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct svg {
    _unused: [u8; 0],
}
extern "C" {
    pub fn spinel_svg_paths_decode(
        svg: *const svg,
        pb: spinel_path_builder_t,
    ) -> *mut spinel_path_t;
}
extern "C" {
    pub fn spinel_svg_rasters_decode(
        svg: *const svg,
        rb: spinel_raster_builder_t,
        paths: *const spinel_path_t,
        ts: *mut spinel_transform_stack,
    ) -> *mut spinel_raster_t;
}
extern "C" {
    pub fn spinel_svg_layers_decode(
        svg: *const svg,
        rasters: *const spinel_raster_t,
        composition: spinel_composition_t,
        styling: spinel_styling_t,
        is_srgb: bool,
    );
}
extern "C" {
    pub fn spinel_svg_paths_release(
        svg: *const svg,
        context: spinel_context_t,
        paths: *mut spinel_path_t,
    );
}
extern "C" {
    pub fn spinel_svg_rasters_release(
        svg: *const svg,
        context: spinel_context_t,
        rasters: *mut spinel_raster_t,
    );
}
extern "C" {
    pub fn spinel_svg_layers_decode_n(
        svg_count: u32,
        svgs: *const *const svg,
        rasters: *const *const spinel_raster_t,
        composition: spinel_composition_t,
        styling: spinel_styling_t,
        is_srgb: bool,
    );
}
extern "C" {
    pub fn spinel_svg_layers_decode_at(
        layer_base: spinel_layer_id,
        group_id: spinel_group_id,
        svg: *const svg,
        rasters: *const spinel_raster_t,
        composition: spinel_composition_t,
        styling: spinel_styling_t,
        is_srgb: bool,
    );
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct spinel_arc_params {
    pub x0: f32,
    pub y0: f32,
    pub x1: f32,
    pub y1: f32,
    pub rx: f32,
    pub ry: f32,
    pub cx: f32,
    pub cy: f32,
    pub phi: f32,
    pub theta: f32,
    pub theta_delta: f32,
}
pub type spinel_arc_params_t = spinel_arc_params;
extern "C" {
    pub fn spinel_path_builder_arc(
        path_builder: spinel_path_builder_t,
        arc_params: *const spinel_arc_params_t,
    ) -> spinel_result_t::Type;
}
extern "C" {
    pub fn spinel_svg_arc(
        x0: f32,
        y0: f32,
        x1: f32,
        y1: f32,
        rx: f32,
        ry: f32,
        x_axis_rotation_radians: f32,
        large_arc_flag: bool,
        sweep_flag: bool,
        arc_params: *mut spinel_arc_params_t,
    );
}
extern "C" {
    pub fn spinel_path_builder_ellipse(
        path_builder: spinel_path_builder_t,
        cx: f32,
        cy: f32,
        rx: f32,
        ry: f32,
    ) -> spinel_result_t::Type;
}
extern "C" {
    pub fn spinel_result_t_to_string(
        result: spinel_result_t::Type,
    ) -> *const ::std::os::raw::c_char;
}
extern "C" {
    pub fn spinel_assert_1(
        file: *const ::std::os::raw::c_char,
        line: u32,
        is_abort: bool,
        result: spinel_result_t::Type,
    ) -> spinel_result_t::Type;
}
extern "C" {
    pub fn spinel_assert_n(
        file: *const ::std::os::raw::c_char,
        line: u32,
        is_abort: bool,
        result: spinel_result_t::Type,
        n: u32,
        expect: *const spinel_result_t::Type,
    ) -> spinel_result_t::Type;
}
